added few tests